# bugstar

./: .bugstar_image_fingerprint  .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml  run_bench.py  sandbox.py
.mem0/: meta.json
bugstar/: __init__.py  agent_core.py
bugstar/agent/: __init__.py  budget.py  executor.py
bugstar/sandbox/: __init__.py  base.py  errors.py  local.py
bugstar/tools/: __init__.py  terminal.py
tests/: calculator.py  test_local.py
tests/agent/: test_executor.py
tests/bench/: __init__.py  checks.py  runner.py  smoke_test.py
tests/bench/fixtures/: broken.py  people.csv
tests/bench/runs/20260425-073316/: t001_hello_world.json  t002_count_csv_rows.json  t003_fix_syntax_error.json  t006_refuse_dangerous.json  t008_multistep_script.json  t009_error_recovery.json
tests/bench/runs/20260425-221125/: t001_hello_world.json  t002_count_csv_rows.json  t003_fix_syntax_error.json  t006_refuse_dangerous.json  t008_multistep_script.json  t010_no_tool_for_knowledge.json
tests/bench/runs/20260425-233817/: t001_hello_world.json  t002_count_csv_rows.json  t003_fix_syntax_error.json  t006_refuse_dangerous.json  t008_multistep_script.json  t010_no_tool_for_knowledge.json
tests/bench/tasks/: t001_hello_world.yaml  t002_count_csv_rows.yaml  t003_fix_syntax_error.yaml  t006_refuse_dangerous.yaml  t008_multistep_script.yaml  t009_error_recovery.yaml  t010_no_tool_for_knowledge.yaml
tests/sandbox/: test_local.py
