[project]
name = "bugstar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.8.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.16",
    "mem0ai[nlp]>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
